# golem-cli

./: .gitignore  CLAUDE.md  Golem.ps1  LICENSE  README.md  playwright.config.mjs  pyproject.toml  tasks.md
.claude/hooks/: block-ask-user-question.py  block-dangerous-git.py  block-golem-cli.py  block-secret-write.py
.github/workflows/: ci.yml  lint.yml  quality-security.yml
.playwright-cli/: page-2026-03-29T16-04-58-560Z.yml  page-2026-03-29T16-05-46-702Z.yml  page-2026-03-29T16-06-13-214Z.yml  page-2026-03-29T16-06-55-763Z.yml  page-2026-03-29T16-07-12-877Z.yml  page-2026-03-29T16-07-23-524Z.yml  page-2026-03-29T16-07-25-762Z.yml  page-2026-03-29T16-07-27-999Z.yml  page-2026-03-29T16-07-39-317Z.yml
agents/: architectural-decisions.md  commands.md  project-structure.md
docs/: overnight-log.md
specs/: smoke-ping.md
src/golem/: __init__.py  (+44 more)
tests/: browse.spec.mjs  conftest.py  test_changelog.py  test_cli.py  test_client.py  test_conductor.py  test_config.py  test_conflicts.py  test_dashboard.py  test_edict.py  test_error_taxonomy.py  test_events.py  test_executor.py  test_handoffs.py  test_hooks.py  test_ideation.py  test_insight_extractor.py  test_mcp_durability.py  test_mcp_sse.py  test_merge.py  test_merge_strategies.py  test_orchestrator.py  test_parallel.py  test_pipeline.py  test_planner.py  test_pr_review.py  test_preflight.py  test_progress.py  test_qa.py  test_recovery.py  test_repos.py  test_reviewer.py  test_security.py  test_server.py  test_session.py  test_supervisor.py  test_tasks.py  test_tech_lead.py  test_tickets.py  test_tool_registry.py  (+7 more)
(+70 files in other folders)
