[project]
name = "golem-cli"
version = "0.2.0"
description = "Autonomous spec executor with ticket-driven agent hierarchy"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "claude-agent-sdk>=0.1.50",
    "typer>=0.15.0",
    "rich>=14.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "httpx>=0.28.0",
]

[project.scripts]
golem = "golem.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/golem"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.7",
]
